Fix messages not appearing when text channel reloads

REVIEWED-BY: Sven Brauch
BUG: 318549